@@ -83,6 +83,8 @@ extern "C" {
 #if OS_API_VERSION(100600, GS_API_LATEST)
 
 DEFINE_BLOCK_TYPE(GSSetEnumeratorBlock, void, id, BOOL*);
+DEFINE_BLOCK_TYPE(GSSetFilterBlock, BOOL, id, BOOL*);
+
 /**
  * Enumerate over the collection using a given block.  The first argument is
  * the object.  The second argument is a pointer to a BOOL indicating
@@ -103,6 +105,12 @@ DEFINE_BLOCK_TYPE(GSSetEnumeratorBlock, void, id, BOOL*);
  */
 - (void) enumerateObjectsWithOptions: (NSEnumerationOptions)opts
                           usingBlock: (GSSetEnumeratorBlock)aBlock;
+
+- (NSSet *) objectsPassingTest: (GSSetFilterBlock)aBlock;
+
+- (NSSet *) objectsWithOptions: (NSEnumerationOptions)opts
+                   passingTest: (GSSetFilterBlock)aBlock;
+
 #endif
 
 #if OS_API_VERSION(100500,GS_API_LATEST) 
